# doc2md

./: .gitignore  README.md  pyproject.toml
notebooks/: explore.ipynb
src/doc2md/: _worker.py  cli.py  converter.py
