[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2md"
version = "0.1.0"
description = "Convert documents (PDF, DOCX, PPTX, HTML, images) to Markdown via Docling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bala Annamalai" }]
dependencies = [
    "docling>=2.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[project.scripts]
doc2md = "doc2md.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
